--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>Javascript Image Editor</title>
     <!-- Link a foglio di style -->
     <link rel='stylesheet' href='./assets/css/style.css'>
+    <!-- Link a Box icon -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Link a FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
+
+
 
     <!-- Link a JS -->
     <script src='./assets/js/app.js'></script>
