Aggiunto bottoni per la modifica delle immagini

--- a/index.html
+++ b/index.html
@@ -52,7 +52,33 @@
                     </div>
                 </div>
                 <!-- /.rotate -->
-                <div class="rotate"></div>
+                <div class="rotate">
+                    <!-- /.title -->
+                    <label class="title">Rotate & Flip</label>
+                    <!-- /.options -->
+                    <div class="options">
+                        <!-- Ruota a SX -->
+                        <button>
+                            <!-- /.fa-solid .fa-rotate-left -->
+                            <i class="fa-solid fa-rotate-left"></i>
+                        </button>
+                        <!-- Ruota a DX -->
+                        <button>
+                            <!-- /.fa-solid .fa-rotate-right -->
+                            <i class="fa-solid fa-rotate-right"></i>
+                        </button>
+                        <!-- Stringi verso l'interno - Verticale -->
+                        <button>
+                            <!-- /.bx .bx-reflect-vertical -->
+                            <i class="bx bx-reflect-vertical"></i>
+                        </button>
+                        <!-- Stringi verso l'interno - Orizzontale -->
+                        <button>
+                            <!-- /.bx .bx-reflect-vertical -->
+                            <i class="bx bx-reflect-horizontal"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
             <!-- /.preview-img -->
             <div class="preview-img"></div>
