Terminato primo markup HTML iniziale, iniziato CSS

--- a/index.html
+++ b/index.html
@@ -81,7 +81,21 @@
                 </div>
             </div>
             <!-- /.preview-img -->
-            <div class="preview-img"></div>
+            <div class="preview-img">
+                <img src="./assets/img/place-holder.jpg" alt="Immagine di Preview">
+            </div>
+        </div>
+        <!-- /.reset-filters -->
+        <div class="controls">
+            <!-- /.controls -->
+            <button class="reset-filters">Reset Filters</button>
+            <!-- /.row -->
+            <div class="row">
+                <!-- /.choose-img -->
+                <button class="choose-img">Choose Image</button>
+                <!-- /.save-img -->
+                <button class="save-img">Save Image</button>
+            </div>
         </div>
     </div>
 
