--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <!-- /.options -->
                     <div class="options">
                         <!-- Luminosità -->
-                        <button>Brightness</button>
+                        <button class="active">Brightness</button>
                         <!-- Saturazione -->
                         <button>Saturation</button>
                         <!-- / -->
