Aggiunto classi riguardanti i controls button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!-- /.reset-filters -->
         <div class="controls">
             <!-- /.controls -->
-            <button class="reset-filters">Reset Filters</button>
+            <button class="reset-filter">Reset Filters</button>
             <!-- /.row -->
             <div class="row">
                 <!-- /.choose-img -->
