Iniziato a selezionare variabili per selezione immagine dal locale

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
             <button class="reset-filter">Reset Filters</button>
             <!-- /.row -->
             <div class="row">
+                <!-- /.file-input  -->
+                <input type="file" class="file-input" accept="image/*" hidden>
                 <!-- /.choose-img -->
                 <button class="choose-img">Choose Image</button>
                 <!-- /.save-img -->
