--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     
     <!-- Container Principale -->
-    <div class="container">
+    <div class="container disable">
         <h2>Image Editor</h2>
         <!-- /.wrapper -->        
         <div class="wrapper">
