Iniziato a lavorare su singoli filtri e a correlarli al mio input range

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
                     <label class="title">Filters</label>
                     <!-- /.options -->
                     <div class="options">
+                        <!-- Aggiungo i miei id ai filtri -->
                         <!-- Luminosità -->
-                        <button class="active">Brightness</button>
+                        <button id="brightness" class="active">Brightness</button>
                         <!-- Saturazione -->
-                        <button>Saturation</button>
+                        <button id="saturation">Saturation</button>
                         <!-- / -->
-                        <button>Inversion</button>
+                        <button id="inversion">Inversion</button>
                         <!-- Scala di grigi -->
-                        <button>Grays</button>
+                        <button id="grays">Grays</button>
                     </div>
                     <!-- /.slider -->
                     <div class="slider">
