Implementato le funzionalita su rotate left e right. iniziato lavoro su streching immagine

--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
                     <!-- /.options -->
                     <div class="options">
                         <!-- Ruota a SX -->
-                        <button>
+                        <button id="left">
                             <!-- /.fa-solid .fa-rotate-left -->
                             <i class="fa-solid fa-rotate-left"></i>
                         </button>
                         <!-- Ruota a DX -->
-                        <button>
+                        <button id="right">
                             <!-- /.fa-solid .fa-rotate-right -->
                             <i class="fa-solid fa-rotate-right"></i>
                         </button>
                         <!-- Stringi verso l'interno - Verticale -->
-                        <button>
+                        <button id="vertical">
                             <!-- /.bx .bx-reflect-vertical -->
                             <i class="bx bx-reflect-vertical"></i>
                         </button>
                         <!-- Stringi verso l'interno - Orizzontale -->
-                        <button>
+                        <button id="horizontal">
                             <!-- /.bx .bx-reflect-vertical -->
                             <i class="bx bx-reflect-horizontal"></i>
                         </button>
